instructions.Instructions.scala.code
baisseBrosse();
droite();
droite();
avance();
avance();
gauche();
gauche();
recule();
recule();
leveBrose();
droite();
avance()